# RestApi_With_Rust_And_Actix

./: .env  Cargo.toml  MakeFile  docker-compose.no_api.yml  readme
migrations/: 20240615031554_init.down.sql  20240615031554_init.up.sql
src/: models.rs
